--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tobs</th>\n",
+       "      <th>June Temp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -199,36 +199,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      tobs\n",
-       "0     78.0\n",
-       "1     76.0\n",
-       "2     78.0\n",
-       "3     76.0\n",
-       "4     77.0\n",
-       "...    ...\n",
-       "1695  79.0\n",
-       "1696  74.0\n",
-       "1697  74.0\n",
-       "1698  76.0\n",
-       "1699  75.0\n",
+       "      June Temp\n",
+       "0          78.0\n",
+       "1          76.0\n",
+       "2          78.0\n",
+       "3          76.0\n",
+       "4          77.0\n",
+       "...         ...\n",
+       "1695       79.0\n",
+       "1696       74.0\n",
+       "1697       74.0\n",
+       "1698       76.0\n",
+       "1699       75.0\n",
        "\n",
        "[1700 rows x 1 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
-    "df_june_temperature = pd.DataFrame(june_temprature)\n",
+    "df_june_temperature = pd.DataFrame(june_temprature, columns=['June Temp'])\n",
     "df_june_temperature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tobs</th>\n",
+       "      <th>June Temp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -293,7 +293,7 @@
        "</div>"
       ],
       "text/plain": [
-       "              tobs\n",
+       "         June Temp\n",
        "count  1700.000000\n",
        "mean     74.944118\n",
        "std       3.257417\n",
@@ -304,14 +304,16 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
-    "df_june_temperature.describe()"
+    "#5 After you run Step 4 in your SurfsUp_Challenge.ipynb file, confirm that the summary statistics match the image below.\n",
+    "\n",
+    "df_june_temperature.describe()\n",
+    "\n"
    ]
   },
   {
@@ -463,7 +465,8 @@
    "source": [
     "#In Step 8, create a DataFrame from the list of temperatures for the month of December.\n",
     "\n",
-    "df_december_temperature = pd.DataFrame(dec_temp)\n",
+    "df_december_temperature = pd.DataFrame(dec_temp, columns=['December Temp'])\n",
+    "df_june_temperature\n",
     "df_december_temperature"
    ]
   },
